--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -94,6 +94,9 @@
     .slide-synopsis {
         font-size: .9rem;
     }
+    .swiper-button-next::after, .swiper-button-prev::after {
+        font-size: 2.8rem !important;
+    }
 }
 .slide-tag {
     max-width: 1100px;
