--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -480,6 +480,9 @@
   .slide-synopsis {
     font-size: .9rem;
   }
+  .swiper-button-next::after, .swiper-button-prev::after {
+    font-size: 2.8rem !important;
+  }
 }
 
 .slide-tag {
